2003-05-13  Vino Crescini  <jcrescin@cit.uws.edu.au>

	* configure.ac :

	  - Added checks for compiler -fPIC and -shared options.

	  - Added an --enable-static option to link the executable statically.

	* rules.mk :
	* lib/Makefile.in :
	* main/Makefile.in :

	  - Renamed phony rules: took out the "copy-" prefix.

	  - Now creates a shared library (where supported) libvlad.so.

	  - By default, the executable will be linked againts the shared lib,
	    unless --enable-static is specified, in which case, it will be
	    linked against the static lib.

2003-05-11  Vino Crescini  <jcrescin@cit.uws.edu.au>

	* configure :
	* configure.ac :
	* rules.mk :
	* lib/Makefile.in :
	* main/Makefile.in :

	  - Library moved from dist/lib/vlad to dist/lib.

	  - Cleanup.

	* Makefile.in :
	* configure :
	* configure.ac :
	* main/Makefile.in :
	* common/* :
	* kb/* :
	* parser/* :

	  - Moved all sources to the new lib directory to combine all
	    objects into one library libvlad.

2003-05-06  Vino Crescini  <jcrescin@cit.uws.edu.au>

	* common/Makefile.in :
	* kb/Makefile.in :
	* main/Makefile.in :
	* parser/Makefile.in :

	  - Now package will build on systems without ln -s or even ln.

	  - Now includes rules.mk.

	* rules.mk :

	  - Added a global rules file to centralise makefile rules.

2003-05-05  Vino Crescini  <jcrescin@cit.uws.edu.au>

	* kb/sequence.cpp :
	* kb/sequence.h :
	* kb/seqtab.cpp :
	* kb/seqtab.h :
	* kb/Makefile.in :

	  - Renamed sequence to seqtab.

	  - Added a delete function.

	* kb/kb.cpp :
	* kb/kb.h :

	  - Sequence table is now global to any query.

	  - Added add, delete and list functions for sequence table.

	* main/vlad.cpp :
	* parser/Makefile.in :
	* parser/parser.h :
	* parser/query.l :
	* parser/query.y :
	* parser/operation.l :
	* parser/operation.y :

	  - Renamed query to operation because the parser/scanner is no longer
	    restricted to queries.

2003-05-02  Vino Crescini  <jcrescin@cit.uws.edu.au>

	* main/vlad.cpp :